调整jvm参数